The form was fucked up  on mobile, so I fixed it. Can I relax for a while now?

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -164,7 +164,7 @@ form {
 }
 
 label {
-  display: flex;
+  display: block;
   margin-bottom: 1.5rem;
 }
 
